menambahkan rps dan toss coin (feature)

--- a/index.html
+++ b/index.html
@@ -133,23 +133,35 @@
 
 					<li class="project-menu">
 						<div class="image-border">
-							<img src="" class="">
+							<img src="img/RPS.png" class="image">
 						</div>
 
 						<div class="text-border">
-							<a href="" class="text-judul"><strong></strong></a>
-							<p class="text-description"></p>
+							<a href="https://kidkats.github.io/RPS/" class="text-judul" target="_blank"><strong>RPS</strong></a>
+							<!-- <p class="text-description"></p> -->
+
+							<span class="source-items">
+								<a href="https://github.com/Kidkats/RPS" class="source" target="_blank">src</a>
+
+								<p class="feature-tag">feature</p>
+							</span>
 						</div>		
 					</li>
 
 					<li class="project-menu">
 						<div class="image-border">
-							<img src="" class="">
+							<img src="img/tosscoin.png" class="image">
 						</div>
 
 						<div class="text-border">
-							<a href="" class="text-judul"><strong></strong></a>
-							<p class="text-description"></p>
+							<a href="https://kidkats.github.io/Toss-coin/" class="text-judul" target="_blank"><strong>Toss Coin</strong></a>
+							<!-- <p class="text-description"></p> -->
+
+							<span class="source-items">
+								<a href="https://github.com/Kidkats/Toss-coin" class="source" target="_blank">src</a>
+
+								<p class="feature-tag">feature</p>
+							</span>
 						</div>		
 					</li>
 
