menambahkan roll dice (feature)

--- a/index.html
+++ b/index.html
@@ -167,12 +167,18 @@
 
 					<li class="project-menu">
 						<div class="image-border">
-							<img src="" class="">
+							<img src="img/rolldice.png" class="image">
 						</div>
 
 						<div class="text-border">
-							<a href="" class="text-judul"><strong></strong></a>
-							<p class="text-description"></p>
+							<a href="https://kidkats.github.io/Roll-dice/" class="text-judul" target="_blank"><strong>Roll Dice</strong></a>
+							<!-- <p class="text-description"></p> -->
+
+							<span class="source-items">
+								<a href="https://github.com/Kidkats/Roll-dice" class="source" target="_blank">src</a>
+
+								<p class="feature-tag">feature</p>
+							</span>
 						</div>		
 					</li>
 
